kubernetes/auth-server-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-server
  labels:
    app: auth-server
spec:
  type: NodePort
  ports:
  - port: 8801
    protocol: TCP
  selector:
    app: auth-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server
  labels:
    app: auth-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
      - name: auth-server
        image: auth-server
        imagePullPolicy: Never
        ports:
        - containerPort: 8801
