kubernetes/mongodb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
          - mountPath: /var/lib/mongodb/data
            name: mongodb
      volumes:
        - name: mongodb
          persistentVolumeClaim:
            claimName: mongodb-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
#  type: NodePort
  ports:
  - port: 27017
    protocol: TCP
  selector:
    app: mongodb
