kubernetes/psql-deploy-service.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres-auth
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-auth
    spec:
      containers:
        - name: postgres
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-auth-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-auth
  labels:
    app: postgres-auth
spec:
  ports:
   - port: 5432
     protocol: TCP
  selector:
   app: postgres-auth
